--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build10.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build12.json", {onProgress: UnityProgress});
     </script>
+
 
     <script type = "text/javascript" language = "javascript">
     var fullscreenID;
@@ -52,44 +53,44 @@
   <body>
     <div class="webgl-content">
 
-    <div id="unityContainer" style="position:relative; width: 100vw; height: 100vh"></div>
+    <div id="unityContainer" style="position:relative; width: 182vh; height: 100vh; max-width: 100vw; max-height: 55vw"></div>
 
     <!-- VK Full Screen -->
-    <div id="yandex_rtb_R-A-1343857-1" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1343857-1" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     <!-- VK Mobile Full Screen -->
-    <div id="yandex_rtb_R-A-1343857-4" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1343857-4" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     <!-- VK Horizontal Banner -->
-    <div id="yandex_rtb_R-A-1343857-2" style="position: absolute; bottom: 0; width: 100vw; height: 10vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1343857-2" style="position: absolute; bottom: 0; width: 182vh; height: 10vh; max-width: 100vw; max-height: 5.5vw; display: none"></div>
 
     <!-- VK Mobile Banner -->
-    <div id="yandex_rtb_R-A-1343857-6" style="position: absolute;  bottom: 0; width: 100vw; height: 10vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1343857-6" style="position: absolute;  bottom: 0; width: 182vh; height: 10vh; max-width: 100vw; max-height: 5.5vw; display: none"></div>
 
     <!-- VK Reward Video -->
-    <div id="yandex_rtb_R-A-1343857-3" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1343857-3" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     <!-- VK Mobile Reward Video -->
-    <div id="yandex_rtb_R-A-1343857-5" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1343857-5" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
 
     <!-- OK Full Screen -->
-    <div id="yandex_rtb_R-A-1462161-1" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1462161-1" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     <!-- OK Mobile Full Screen -->
-    <div id="yandex_rtb_R-A-1462161-4" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1462161-4" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     <!-- OK Horizontal Banner -->
-    <div id="yandex_rtb_R-A-1462161-2" style="position: absolute; bottom: 0;  width: 100vw; height: 10vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1462161-2" style="position: absolute; bottom: 0; width: 182vh; height: 10vh; max-width: 100vw; max-height: 5.5vw: none"></div>
 
     <!-- OK Mobile Banner -->
-    <div id="yandex_rtb_R-A-1462161-6" style="position: absolute;  bottom: 0; width: 100vw; height: 10vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1462161-6" style="position: absolute;  bottom: 0; width: 182vh; height: 10vh; max-width: 100vw; max-height: 5.5vw; display: none"></div>
 
     <!-- OK Reward Video -->
-    <div id="yandex_rtb_R-A-1462161-3" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1462161-3" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     <!-- OK Mobile Reward Video -->
-    <div id="yandex_rtb_R-A-1462161-5" style="position: absolute; top: 16%; width: 100vw; height: 67vh; display: none"></div>
+    <div id="yandex_rtb_R-A-1462161-5" style="position: absolute; top: 16%; width: 182vh; height: 67vh; max-width: 100vw; max-height: 36.85vw; display: none"></div>
 
     </div>
 
@@ -97,7 +98,7 @@
 
 // Initialization
     function VerticalInitialization() {
-      unityInstance.SendMessage('AdsManager', 'VerticalInitialization', 1);
+      unityInstance.SendMessage('PlatformManager', 'VerticalInitialization', 0);
     }
 
     function VKAdsInitialization() {
